--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>tech blog </title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,8 +13,8 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+        
+        <a href="/">create a new post!</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
@@ -22,8 +22,10 @@
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">login</a> |
         {{/if}}
+        <a href="/login"> dashboard </a> |
+        <a href="/profile"> homepage </a> |
       </nav>
     </header>
     <main class="container container-fluid mt-5">
