--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         
-        <a href="/">create a new post!</a>
+        <a href="/">create/view posts!</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
