pushing to heroku

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,8 @@
         {{else}}
         <a href="/login">login</a> |
         {{/if}}
-        <a href="/login"> dashboard </a> |
-        <a href="/profile"> homepage </a> |
+        
+        <a href="/"> homepage </a> |
       </nav>
     </header>
     <main class="container container-fluid mt-5">
